<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/sysu"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>
    <TextView
        android:id="@+id/tv_id_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_id"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/sysu_height"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/et_id_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/id_hint"
        android:textSize="@dimen/sysu_height"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="@id/tv_id_num"
        app:layout_constraintBottom_toBottomOf="@id/tv_id_num"
        app:layout_constraintLeft_toRightOf="@id/tv_id_num"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/sysu_height"
        app:layout_constraintTop_toBottomOf="@id/tv_id_num"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password_hint"
        android:textSize="@dimen/sysu_height"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="@id/tv_password"
        app:layout_constraintBottom_toBottomOf="@id/tv_password"
        app:layout_constraintLeft_toRightOf="@id/tv_password"
        app:layout_constraintRight_toRightOf="parent"/>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <RadioButton
            android:id="@+id/rb_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:checked="true"
            android:textSize="@dimen/sysu_height"
            android:layout_marginRight="5dp"
            />
        <RadioButton
            android:id="@+id/rb_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textSize="@dimen/sysu_height"
            android:layout_marginLeft="5dp"

            />
    </RadioGroup>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/register"
        android:textSize="@dimen/sysu_height"
        app:layout_constraintLeft_toRightOf="@+id/btn_login"
        app:layout_constraintTop_toTopOf="@+id/btn_login"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/student"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/sysu_height"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/rg"
        app:layout_constraintRight_toLeftOf="@id/btn_register"
        app:layout_constraintLeft_toLeftOf="parent"
        />



</android.support.constraint.ConstraintLayout>
